ultimas alterações e integração com  a lib AOS

--- a/styles/about.css
+++ b/styles/about.css
@@ -18,3 +18,13 @@
 .about p a:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 1080px) {
+  .about {
+    padding: 24px;
+  }
+
+  .about p {
+    font-size: 14px;
+  }
+}
