--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 @import url(./user.css);
 @import url(./social.css);
 @import url(./about.css);
+@import url(./projects.css);
 
 * {
   margin: 0;
@@ -44,10 +45,6 @@ body {
   margin: 160px auto 100px;
 }
 
-.projects {
-  grid-column: 1 / 3;
-}
-
 .card {
   border-radius: 12px;
   background: var(--background-card);
@@ -57,4 +54,34 @@ body {
 .subtitle {
   font-size: 28px;
   font-weight: 600;
+}
+
+@media (max-width: 1200px) {
+  .app {
+    gap: 40px;
+    grid-template-columns: auto 1fr;
+
+    margin: 120px 0;
+  }
+}
+
+@media (max-width: 1080px) {
+  .app {
+    gap: 24px;
+  }
+}
+
+@media (max-width: 768px) {
+  .app {
+    display: flex;
+    flex-direction: column;
+
+    margin: 40px 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .subtitle {
+    font-size: 24px;
+  }
 }
